# empty-contract

./: Cargo.toml  README.md
src/: contract.rs  error.rs  lib.rs  msg.rs
